--- a/Back End/package.json
+++ b/Back End/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "stripe": "^17.2.1",
     "validator": "^13.12.0"
   }
