--- a/Front End/package.json
+++ b/Front End/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.5.4",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.30.1",
     "node-sass": "^9.0.0",
